fix image upload input button visibility

--- a/src/App.css
+++ b/src/App.css
@@ -71,9 +71,9 @@
 }
 
 
-input[type=file] {
+/* input[type=file] {
   visibility: hidden;
-}
+} */
 
 .upload-container {
   display: flex;
